# Kurs_3

./: pyproject.toml
src/: main.py
src/utils/: utils.py
tests/: test_utils.py
tests/data/: test_operations.json
