[tool.poetry]
name = "kurs-3"
version = "0.1.0"
description = ""
authors = ["Inna Antypova <nightallatiel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
coverage = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
